re PR target/35190 (Wrong branch instruction with -freorder-blocks-and-partition on SH)

PR target/35190
	* config/sh/sh.md (jump_compact): Disable for crossing jumps.

	* config/sh/sh.c (find_barrier): Don't go past
	NOTE_INSN_SWITCH_TEXT_SECTIONS note.

From-SVN: r132502